# rust_crud_basic

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
deployments/: docker-compose.yml
migrations/: 20250326071808_create_users_table.sql  20250326085525_create_items_table.sql
src/: config.rs  handlers.rs  main.rs  models.rs  repository.rs  routes.rs
src/api/rest/api/: server.rs
src/api/rest/api/routes/: routes.rs
src/config/: settings.rs
src/internal/: mod.rs
src/internal/application/: mod.rs
src/internal/application/controllers/: mod.rs
src/internal/application/controllers/auth/: login.rs
src/internal/application/controllers/items/: items.rs
src/internal/application/controllers/users/: users.rs
src/internal/application/repositories/: mod.rs
src/internal/application/repositories/items/: items.rs
src/internal/application/repositories/users/: users.rs
src/internal/application/usecases/auth/: login.rs
src/internal/application/usecases/items/: items.rs
src/internal/application/usecases/users/: users.rs
src/internal/constant/: status.rs
src/internal/domain/entities/: mod.rs  response.rs
src/internal/domain/entities/auth/: login.rs
src/internal/domain/entities/items/: items.rs
src/internal/domain/entities/users/: users.rs
src/internal/pkg/database/sql/: postgres.rs
src/internal/pkg/utils/: jwt_exp.rs  mod.rs  pagination.rs
src/middlewares/: jwt.rs  logger.rs  mod.rs
