[package]
name = "rust_crud_basic"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls"] }
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
once_cell = "1.19"
regex = "1.11.1"
url = "2.5.4"
jsonwebtoken = "9.3.1"
bcrypt = "0.15"
futures-util = "0.3.31"